@@ -181,6 +181,33 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.11.0</version>
+  <configuration>
+    <source>17</source>
+    <target>17</target>
+    <encoding>${project.build.sourceEncoding}</encoding>
+    <compilerArgs>
+      <arg>--add-exports</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+      <arg>--add-exports</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+      <arg>--add-exports</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+    </compilerArgs>
+    <annotationProcessorPaths>
+      <path>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.30</version>
+      </path>
+    </annotationProcessorPaths>
+  </configuration>
+</plugin>
+			
+			
 		</plugins>
 	</build>
 </project>
